--- a/StaffControllerTest/StaffControllerTest.csproj
+++ b/StaffControllerTest/StaffControllerTest.csproj
@@ -5,8 +5,8 @@
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Cloud-System-dev-ops\Staff App.csproj" />
+    <ProjectReference Include="..\Could-System-dev-ops\Staff App.csproj" />
   </ItemGroup>
 
 </Project>
